tests/auto-gen/inputvalidation001/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: Error during reflection: ValidateInput.X is not in scope.

ValidateInput.idr:13:1--13:35
 09 | --------------------
 10 | --- Unknown type ---
 11 | --------------------
 12 | 
 13 | %runElab generateGensFor "X" [] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: ValidateInput.X is not in scope.

ValidateInput.idr:15:1--15:39
 11 | --------------------
 12 | 
 13 | %runElab generateGensFor "X" [] []
 14 | 
 15 | %runElab generateGensFor "X" ["a"] [0]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

